test_output.log
   Compiling oxidize-pdf v1.1.8 (/Users/santifdezmunoz/Documents/repos/BelowZero/oxidize-pdf/oxidize-pdf-core)
warning: unused import: `std::path::Path`
 --> oxidize-pdf-core/examples/merge_pdfs.rs:8:5
  |
8 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: `oxidize-pdf` (example "merge_pdfs") generated 1 warning (run `cargo fix --example "merge_pdfs"` to apply 1 suggestion)
warning: unused imports: `ActionSettings`, `BorderStyle`, `FieldType`, `TextField`, and `Widget`
  --> oxidize-pdf-core/../examples/src/field_actions.rs:13:9
   |
13 |         ActionSettings, FieldAction, FieldActionSystem, FieldActions, FormatActionType,
   |         ^^^^^^^^^^^^^^
...
16 |     BorderStyle, FieldType, TextField, Widget,
   |     ^^^^^^^^^^^  ^^^^^^^^^  ^^^^^^^^^  ^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `oxidize_pdf::geometry::Rectangle`
  --> oxidize-pdf-core/../examples/src/field_actions.rs:18:5
   |
18 | use oxidize_pdf::geometry::Rectangle;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `oxidize_pdf::graphics::Color`
  --> oxidize-pdf-core/../examples/src/field_actions.rs:19:5
   |
19 | use oxidize_pdf::graphics::Color;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> oxidize-pdf-core/../examples/src/field_actions.rs:22:5
   |
22 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::path::Path`
 --> oxidize-pdf-core/tests/integration_fonts.rs:5:5
  |
5 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0061]: this function takes 1 argument but 0 arguments were supplied
   --> oxidize-pdf-core/tests/integration_fonts.rs:93:19
    |
93  |     let mut doc = PdfDocument::new();
    |                   ^^^^^^^^^^^^^^^^-- argument #1 of type `PdfReader<_>` is missing
    |
note: associated function defined here
   --> /Users/santifdezmunoz/Documents/repos/BelowZero/oxidize-pdf/oxidize-pdf-core/src/parser/document.rs:219:12
    |
219 |     pub fn new(reader: PdfReader<R>) -> Self {
    |            ^^^
help: provide the argument
    |
93  |     let mut doc = PdfDocument::new(/* reader */);
    |                                    ++++++++++++

error[E0599]: no method named `add_page` found for struct `PdfDocument` in the current scope
  --> oxidize-pdf-core/tests/integration_fonts.rs:96:23
   |
96 |     let page_id = doc.add_page(595.0, 842.0).unwrap();
   |                       ^^^^^^^^ method not found in `PdfDocument<_>`

error[E0599]: no method named `add_text_to_page` found for struct `PdfDocument` in the current scope
   --> oxidize-pdf-core/tests/integration_fonts.rs:99:9
    |
99  |     doc.add_text_to_page(page_id, "Hello, World!", 100.0, 700.0, 12.0).ok();
    |         ^^^^^^^^^^^^^^^^
    |
help: there is a method `get_page` with a similar name, but with different arguments
   --> /Users/santifdezmunoz/Documents/repos/BelowZero/oxidize-pdf/oxidize-pdf-core/src/parser/document.rs:387:5
    |
387 |     pub fn get_page(&self, index: u32) -> ParseResult<ParsedPage> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `save_to_bytes` found for struct `PdfDocument` in the current scope
   --> oxidize-pdf-core/tests/integration_fonts.rs:102:25
    |
102 |     let pdf_bytes = doc.save_to_bytes().unwrap();
    |                         ^^^^^^^^^^^^^ method not found in `PdfDocument<_>`

error[E0308]: mismatched types
   --> oxidize-pdf-core/tests/integration_fonts.rs:116:34
    |
116 |     assert_eq!(descriptor.flags, 32); // Default flags
    |                                  ^^ expected `FontFlags`, found integer

error[E0277]: can't compare `f32` with `{integer}`
   --> oxidize-pdf-core/tests/integration_fonts.rs:119:5
    |
119 |     assert_eq!(descriptor.font_bbox, [-200, -200, 1000, 800]);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `f32 == {integer}`
    |
    = help: the trait `PartialEq<{integer}>` is not implemented for `f32`
            but trait `PartialEq<f32>` is implemented for it
    = help: for that trait implementation, expected `f32`, found `{integer}`
    = note: required for `[f32; 4]` to implement `PartialEq<[{integer}; 4]>`
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> oxidize-pdf-core/tests/integration_fonts.rs:122:35
    |
122 |     assert_eq!(descriptor.ascent, 800);
    |                                   ^^^ expected `f32`, found integer
    |
help: use a float literal
    |
122 |     assert_eq!(descriptor.ascent, 800.0);
    |                                      ++

error[E0308]: mismatched types
   --> oxidize-pdf-core/tests/integration_fonts.rs:123:36
    |
123 |     assert_eq!(descriptor.descent, -200);
    |                                    ^^^^ expected `f32`, found integer
    |
help: use a float literal
    |
123 |     assert_eq!(descriptor.descent, -200.0);
    |                                        ++

error[E0308]: mismatched types
   --> oxidize-pdf-core/tests/integration_fonts.rs:124:39
    |
124 |     assert_eq!(descriptor.cap_height, 700);
    |                                       ^^^ expected `f32`, found integer
    |
help: use a float literal
    |
124 |     assert_eq!(descriptor.cap_height, 700.0);
    |                                          ++

error[E0308]: mismatched types
   --> oxidize-pdf-core/tests/integration_fonts.rs:125:35
    |
125 |     assert_eq!(descriptor.stem_v, 80);
    |                                   ^^ expected `f32`, found integer
    |
help: use a float literal
    |
125 |     assert_eq!(descriptor.stem_v, 80.0);
    |                                     ++

warning: variable does not need to be mutable
  --> oxidize-pdf-core/tests/integration_fonts.rs:83:9
   |
83 |     let mut glyph_mapping = Default::default();
   |         ----^^^^^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

Some errors have detailed explanations: E0061, E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `oxidize-pdf` (test "integration_fonts") generated 2 warnings
error: could not compile `oxidize-pdf` (test "integration_fonts") due to 10 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `oxidize-pdf` (example "field_actions") generated 4 warnings (run `cargo fix --example "field_actions"` to apply 4 suggestions)
